--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 VOTE_APP_TITLE='Awesome Voting App'
-AZURE_VOTE_IMAGE_REPO=<ACR_NAME>.azurecr.io/azvote
+AZURE_VOTE_IMAGE_REPO=lucaliacr-microsoft.azurecr.io/azvote
 FRONTEND_IMAGE=v2
 BACKEND_IMAGE=6.0.8
 TARGET_NAMESPACE=local-dev
