--- a/.github/workflows/az-vote-cicd.yml
+++ b/.github/workflows/az-vote-cicd.yml
@@ -31,6 +31,7 @@ jobs:
       uses: Azure/cli@1.0.4
       with:
         inlineScript:  |
+          sudo chown -R $USER:$USER $GITHUB_WORKSPACE
           chmod +x $GITHUB_WORKSPACE/utils/buildContainerTemplate.sh
           $GITHUB_WORKSPACE/utils/buildContainerTemplate.sh -f $SRC_FOLDER \
                                                            -g $GITHUB_WORKSPACE \
