--- a/azure-vote/src/azure-vote-front/config_file.cfg
+++ b/azure-vote/src/azure-vote-front/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'The Voting App via gitops'
-VOTE1VALUE = 'Tabs2'
+VOTE1VALUE = 'Tabs'
 VOTE2VALUE = 'Spaces'
 SHOWHOST = 'true'
